--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start": "node src/server",
         "dev": "nodemon src/server",
         "reset:migrate": "node ./src/tests/testMigrate.js",
-        "test": "bun test --detectOpenHandles ",
+        "test": "jest test --detectOpenHandles",
         "pretest": "npm run reset:migrate"
     },
     "keywords": [],
